Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4479

[clang-analyzer] Memory leak in logging

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 6.2.0
    • 7.0.0
    • Logging
    • None

    Description

      Memory leak found with clang-analyzer in LogCollationAccept::accept_event():

      File:	proxy/logging/LogCollationAccept.cc
      Location:	line 99, column 5
      Description:	Potential leak of memory pointed to by 'sm'
      

      Attachments

        Activity

          People

            bcall Bryan Call
            bcall Bryan Call
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: