TS-4479: Clang-analyzer failure, Potential memory leak

(cherry picked from commit 87d1fc5d17d82ebb8f06f4138ca82b6e3b57179c)